--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>KAH_Web Guide</title>
     <style>
         *{margin:0; padding:0;}
+        img{width:100%;}
+        div{width:100%;}
     </style>
 </head>
 <body>
